src/test/ui/did_you_mean/issue-40823.stderr
error[E0596]: cannot borrow immutable borrowed content `*buf` as mutable
  --> $DIR/issue-40823.rs:3:5
   |
LL |     buf.iter_mut(); //~ ERROR cannot borrow immutable borrowed content
   |     ^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
