src/test/ui/did_you_mean/issue-40823.rs
fn main() {
    let mut buf = &[1, 2, 3, 4];
    buf.iter_mut(); //~ ERROR cannot borrow immutable borrowed content
}
